User account confirmation through confirmation token works. ConfirmationTokenRepository contains the custom query to update the confirmedAt field of the token.

--- a/src/main/resources/static/homepage.html
+++ b/src/main/resources/static/homepage.html
@@ -5,9 +5,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-<p><a href="/hello">Greet the world!</a></p>
+<p>Hello World!</p>
 
-<form action="/getCourses" method="GET" id="nameForm">
+<form action="/course/getAll" method="GET" id="nameForm">
         <button>Greet me!</button>
 </form>
 </body>
